@@ -2,6 +2,8 @@ buildingbricks.config.world.cat=World
 buildingbricks.config.world.cat.tooltip=Configuration options that affect worlds.
 buildingbricks.config.world.generateGrassSlabs=Generate grass slabs
 
+buildingbricks.chat.idMappingsInvalid=The BuildingBricks configuration on this client differs from the one on the server, this might cause issues.
+
 itemGroup.buildingBricks=Building Bricks
 
 item.trowel.name=Trowel
